tests/spectest/br_on_null.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\91\80\80\80\00\03\60"
  "\00\01\7f\60\01\64\00\01\7f\60\01\63\00\01\7f\03"
  "\88\80\80\80\00\07\01\02\00\00\00\00\00\07\bc\80"
  "\80\80\00\04\0d\6e\75\6c\6c\61\62\6c\65\2d\6e\75"
  "\6c\6c\00\03\0d\6e\6f\6e\6e\75\6c\6c\61\62\6c\65"
  "\2d\66\00\04\0a\6e\75\6c\6c\61\62\6c\65\2d\66\00"
  "\05\0b\75\6e\72\65\61\63\68\61\62\6c\65\00\06\09"
  "\85\80\80\80\00\01\01\00\01\02\0a\e3\80\80\80\00"
  "\07\8e\80\80\80\00\00\02\40\20\00\d5\00\14\00\0f"
  "\0b\41\7f\0b\8e\80\80\80\00\00\02\40\20\00\d5\00"
  "\14\00\0f\0b\41\7f\0b\84\80\80\80\00\00\41\07\0b"
  "\86\80\80\80\00\00\d0\00\10\01\0b\86\80\80\80\00"
  "\00\d2\02\10\00\0b\86\80\80\80\00\00\d2\02\10\01"
  "\0b\8d\80\80\80\00\00\02\40\00\d5\00\14\00\0f\0b"
  "\41\7f\0b"
)
(module instance)
(assert_trap (invoke "unreachable") "unreachable")
(assert_return (invoke "nullable-null") (i32.const 0xffff_ffff))
(assert_return (invoke "nonnullable-f") (i32.const 0x7))
(assert_return (invoke "nullable-f") (i32.const 0x7))
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\91\80\80\80\00\04\60"
  "\00\00\60\01\63\00\00\60\01\70\00\60\01\6f\00\03"
  "\84\80\80\80\00\03\01\02\03\0a\a5\80\80\80\00\03"
  "\87\80\80\80\00\00\20\00\d5\00\1a\0b\87\80\80\80"
  "\00\00\20\00\d5\00\1a\0b\87\80\80\80\00\00\20\00"
  "\d5\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\8d\80\80\80\00\02\60"
  "\01\7f\01\7f\60\02\7f\63\00\01\7f\03\85\80\80\80"
  "\00\04\00\01\00\00\07\96\80\80\80\00\02\09\61\72"
  "\67\73\2d\6e\75\6c\6c\00\02\06\61\72\67\73\2d\66"
  "\00\03\09\85\80\80\80\00\01\01\00\01\00\0a\ba\80"
  "\80\80\00\04\87\80\80\80\00\00\20\00\20\00\6c\0b"
  "\8e\80\80\80\00\00\02\7f\20\00\20\01\d5\00\14\00"
  "\0f\0b\0b\88\80\80\80\00\00\20\00\d0\00\10\01\0b"
  "\88\80\80\80\00\00\20\00\d2\00\10\01\0b"
)
(module instance)
(assert_return (invoke "args-null" (i32.const 0x3)) (i32.const 0x3))
(assert_return (invoke "args-f" (i32.const 0x3)) (i32.const 0x9))
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8f\80\80\80\00\03\60"
    "\00\00\60\01\63\00\01\70\60\01\70\01\70\03\83\80"
    "\80\80\00\02\01\02\0a\9a\80\80\80\00\02\84\80\80"
    "\80\00\00\20\00\0b\8b\80\80\80\00\00\d0\00\20\00"
    "\d5\00\1a\10\00\0b"
  )
  "type mismatch"
)
